--- a/src/style.css
+++ b/src/style.css
@@ -3,26 +3,39 @@
   margin: 0;
 }
 
-.wrap {
+:root {
+  --clr--neon: hsl(317 100% 54%);
+  --clr--bg: hsl(323 21% 16%);
+}
+
+.leaderboard {
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr--bg);
+  color: var(--clr--neon);
+}
+
+.wrap {
+  width: 100%;
 }
 
 .headingdiv {
   display: flex;
   align-items: center;
   padding: 3rem 7%;
-  min-height: 10vh;
 }
 
 .h1 {
   font-size: 3rem;
   align-items: center;
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
 }
 
 .maindiv {
   display: flex;
   gap: 10%;
-  min-height: 70vh;
   justify-content: center;
   width: 100%;
   padding-bottom: 3rem;
@@ -42,19 +55,17 @@
 .first1 {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .firstheading {
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
   font-size: 2rem;
 }
 
-.mainbutton {
-  height: 2rem;
-  padding: 0.1rem;
-}
-
 .scores {
-  border: 0.1rem solid black;
+  border: 3px solid var(--clr--neon);
+  color: #fff;
 }
 
 .list {
@@ -69,8 +80,31 @@
   gap: 1rem;
 }
 
+.button {
+  cursor: pointer;
+  color: var(--clr--neon);
+  border: 1px solid var(--clr--neon);
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
+  box-shadow: inset 0 0 0.5em 0 var(--clr--neon), 0 0 0.5em 0 var(--clr--neon);
+  background: none;
+  padding: 0.1rem;
+  height: 2rem;
+  padding-inline: 1rem;
+  font-size: 0.8rem;
+  font-family: "Balsamiq Sans", cursive;
+}
+
+.button:hover {
+  box-shadow: 0 0 2em 0.5em var(--clr--neon);
+  background-color: var(--clr--neon);
+  color: black;
+  transition: opacity 100ms linear;
+  text-shadow: none;
+}
+
 .secondheading {
   font-size: 2rem;
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em currentColor;
 }
 
 .form {
@@ -81,14 +115,11 @@
 
 .addinput {
   max-width: 13rem;
+  padding: 0.2rem;
 }
 
 .submitdiv {
   display: flex;
   justify-content: end;
   max-width: 13rem;
-}
-
-.submitbutton {
-  width: 4rem;
 }
